FRI-122 Refactored SRSWorkerService not to lookup products from mysql db